# arduino-iot-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  credentials_example.json  main.py  toolchain-rpi.cmake
examples/rpi-iot-gateway/: CMakeLists.txt  README.md
examples/rpi-iot-gateway/src/: main.cpp
examples/rpi-iot-gateway/src/Application/: Application.cpp  Application.hpp
examples/rpi-iot-gateway/src/MeteoStationUart/: MeteoStationUart.cpp  MeteoStationUart.hpp
examples/rpi-iot-gateway/src/common/: logs.h
src/: main.cpp
src/Application/: Application.cpp  Application.hpp
src/SenMLCborPacker/: SenMLCborPacker.cpp  SenMLCborPacker.hpp
src/StationData/: StationData.cpp  StationData.hpp
src/cborp/: CborPacker.cpp  CborPacker.hpp
src/client/: ArduinoCloud.cpp  ArduinoCloud.hpp
src/common/: logs.h
src/mqtt/: MqttClient.cpp  MqttClient.hpp
src/types/: Property.hpp  PropertyUpdate.hpp  Thing.hpp
